Refactored RequestFactory. Update tests.