@@ -16,19 +16,19 @@
 
 package io.github.ma1uta.matrix.client.methods;
 
+import static com.github.tomakehurst.wiremock.client.WireMock.equalTo;
+import static com.github.tomakehurst.wiremock.client.WireMock.get;
+import static com.github.tomakehurst.wiremock.client.WireMock.okJson;
+import static com.github.tomakehurst.wiremock.client.WireMock.unauthorized;
+import static com.github.tomakehurst.wiremock.client.WireMock.urlMatching;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.junit.jupiter.api.Assertions.fail;
 
 import io.github.ma1uta.matrix.client.model.voip.VoipResponse;
-import io.github.ma1uta.matrix.client.test.ConfigurableServlet;
 import io.github.ma1uta.matrix.client.test.MockServer;
 import org.junit.jupiter.api.Test;
 
-import java.io.IOException;
-import java.io.PrintWriter;
 import java.util.List;
 import javax.ws.rs.core.MediaType;
 
@@ -41,35 +41,31 @@ class VoipMethodsTest extends MockServer {
 
     @Test
     public void voip() {
-        ConfigurableServlet.get = (req, res) -> {
-            assertTrue(req.getRequestURI().startsWith("/_matrix/client/r0/voip"));
-
-            if (authenticated(req, res)) {
-                try {
-                    res.setContentType(MediaType.APPLICATION_JSON);
-                    PrintWriter writer = res.getWriter();
-                    writer.println("{\n" +
-                        "  \"username\": \"1443779631:@user:example.com\",\n" +
-                        "  \"password\": \"JlKfBy1QwLrO20385QyAtEyIv0=\",\n" +
-                        "  \"uris\": [\n" +
-                        "    \"turn:turn.example.com:3478?transport=udp\",\n" +
-                        "    \"turn:10.20.30.40:3478?transport=tcp\",\n" +
-                        "    \"turns:10.20.30.40:443?transport=tcp\"\n" +
-                        "  ],\n" +
-                        "  \"ttl\": 86400\n" +
-                        "}");
-                } catch (IOException e) {
-                    fail();
-                }
-            }
-        };
+        wireMockServer.stubFor(get(urlMatching("/_matrix/client/r0/voip/turnServer/?"))
+            .withHeader("Authorization", equalTo("Bearer " + ACCESS_TOKEN))
+            .willReturn(okJson("{\n" +
+                "  \"username\": \"1443779631:@user:example.com\",\n" +
+                "  \"password\": \"JlKfBy1QwLrO20385QyAtEyIv0=\",\n" +
+                "  \"uris\": [\n" +
+                "    \"turn:turn.example.com:3478?transport=udp\",\n" +
+                "    \"turn:10.20.30.40:3478?transport=tcp\",\n" +
+                "    \"turns:10.20.30.40:443?transport=tcp\"\n" +
+                "  ],\n" +
+                "  \"ttl\": 86400\n" +
+                "}")
+            )
+        );
+        wireMockServer.stubFor(get(urlMatching("/_matrix/client/r0/voip/turnServer/?"))
+            .atPriority(10)
+            .willReturn(unauthorized().withHeader("Content-Type", MediaType.APPLICATION_JSON).withBody("{}"))
+        );
 
         getMatrixClient().getDefaultParams().accessToken(ACCESS_TOKEN);
         VoipResponse voip = getMatrixClient().turnServers().turnServers().join();
         assertNotNull(voip);
         assertEquals("1443779631:@user:example.com", voip.getUsername());
         assertEquals("JlKfBy1QwLrO20385QyAtEyIv0=", new String(voip.getPassword()));
-        assertEquals(new Long(86400L), voip.getTtl());
+        assertEquals(Long.valueOf(86400L), voip.getTtl());
 
         List<String> uris = voip.getUris();
         assertNotNull(uris);
